[gd_scene load_steps=7 format=2]

[ext_resource path="res://Sprites/Enemies/spitter.png" type="Texture" id=1]
[ext_resource path="res://Scenes/enemies/spitter.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="Animation" id=2]
resource_name = "fly"
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath(".:verticalOffset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -2.0, 2.0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "fly"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 44, 317 )

[node name="spitter" type="Area2D" groups=["enemy"]]
position = Vector2( 0, -29.5612 )
collision_layer = 2
collision_mask = 17
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 13.5612 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
hframes = 3

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 13.5612 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 2 )

[node name="idle" type="AnimationPlayer" parent="."]
anims/fly = SubResource( 3 )

[node name="detectionRange" type="Area2D" parent="."]
position = Vector2( 352, -0.438801 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="detectionRange"]
position = Vector2( 0, -14.439 )
rotation = -1.5708
shape = SubResource( 4 )

[node name="spitTimer" type="Timer" parent="."]
wait_time = 1.5

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 16, 5.5612 )

[connection signal="area_entered" from="." to="." method="_on_spitter_area_entered"]
[connection signal="body_exited" from="." to="." method="_on_spitter_body_exited"]
[connection signal="body_entered" from="detectionRange" to="." method="_on_detectionRange_body_entered"]
[connection signal="timeout" from="spitTimer" to="." method="_on_spitTimer_timeout"]
